[tool.poetry]
name = "rock-paper-scissor-git"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissor_git"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa = "^3.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
